--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
 <body>
     <h1 id="dynamicText">Helllooooo</h1>
     <h1>Mistaaaa</h1>
-
+    <p>Here you can add your personal user name</p>
+    <form action="/addUser" method="post">
+        <input type="text" name="name">
+        <button type="submit">Submit</button>
+    </form>
      
     <script>
         // Fetch data from the server
         fetch('http://localhost:3000/data')
-            .then(response => response.json())
+            .then(response => {
+                
+                return response.json();
+            })
             .then(data => {
                 const h1 = document.getElementById('dynamicText');
                 // Assuming your data is an array of objects with 'name' property
-                console.log(data.data[0].name)
-                h1.textContent += ' ' + data.data[0].name;
+                if(!(data.data.length === 0)) {
+                    console.log(data.data[0].name)
+                    let names = "";
+                    data.data.forEach((object) => {
+                        names += " " + object.name;
+                    })
+                    h1.textContent += ' ' + names;
+                }
             })
             .catch(error => console.error('Error fetching data:', error));
     </script>
